--- a/_data/languages.yml
+++ b/_data/languages.yml
@@ -54,6 +54,8 @@
 - name: D
   homepage: https://dlang.org/
 - name: Dark
+- name: Dark BASIC
+- name: Delphi
 - name: Dhall
   homepage: https://github.com/dhall-lang/dhall-haskell 
 - name: Dyalog
@@ -91,8 +93,11 @@
   homepage: https://kappalanguage.org/
 - name: Lapis
 - name: LaTex
+- name: LINGOL
+  author: Vaughn Pratt
 - name: Nim
   homepage: https://nim-lang.org/
+- name: Octave
 - name: Om
   homepage: http://www.om-language.org/
   logo: ./images/logos/om.png
@@ -108,6 +113,8 @@
 - name: SMP
 - name: SNOBOL
 - name: SOIL
+- name: Solidity
+  homepage: https://soliditylang.org/
 - name: Tex
 - name: TLA+
 - name: Zig
