lang list update

--- a/_data/languages.yml
+++ b/_data/languages.yml
@@ -78,6 +78,8 @@
   homepage: https://cicada-lang.org/
   urls:
     - https://www.reddit.com/r/ProgrammingLanguages/comments/s4crfg/cicada_language_a_dependently_typed_programming/
+- name: Clean
+  homepage: https://wiki.clean.cs.ru.nl/Clean
 - name: Clojure
 - name: CLU
   author: Barbara Liskov
@@ -131,6 +133,9 @@
 - name: ECMAScript
   homepage: https://tc39.es/
   logo: ./images/logos/javascript.jpg
+- name: Ecstasy
+  homepage: 
+  homepage: https://xtclang.org/
 - name: Eff
   homepage: https://www.eff-lang.org/
   urls:
@@ -270,6 +275,9 @@
   homepage: https://web.archive.org/web/20090401141153/http://ecmascript4.com/
 - name: Maude
   homepage: https://github.com/SRI-CSL/Maude
+  urls:
+    - https://maude.cs.illinois.edu/w/images/0/0d/Maude-book.pdf
+    - https://web.archive.org/web/20110514234232/http://www.cs.swan.ac.uk/~csneal/MaudeCourse/index.html
 - name: Max Creation Graph (MCG)
   urls:
     - https://www.vfxarabia.co/mcg
@@ -295,10 +303,16 @@
   homepage: http://parasail-lang.org/
 - name: Pascal
 - name: PH
+- name: π
+  homepage: http://www.pi-programming.org/What.html
 - name: PLANNER
 - name: Plato
   author: Christopher Diggins
   homepage: https://github.com/cdiggins/plato
+- name: Pure
+  homepage: https://agraef.github.io/pure-lang/
+  urls:
+    - https://web.archive.org/web/20110309024600/http://blueparen.com/node/6
 - name: Python
   homepage: https://www.python.org/
   urls:
@@ -330,11 +344,18 @@
     - https://news.ycombinator.com/item?id=12969014
     - https://news.ycombinator.com/item?id=12923692
     - https://news.ycombinator.com/item?id=13265758
+- name: Sather
+  homepage: http://www.gnu.org/software/sather/
 - name: Self
   homepage: https://selflanguage.org/
   logo: ./images/logos/self.png
 - name: SIMULA
 - name: Sketchpad
+- name: Slate
+  homepage: https://github.com/briantrice/slate-language
+  urls:
+    - https://web.archive.org/web/20150327154912/http://slatelanguage.org/
+    - https://web.archive.org/web/20081109032008/http://slate.tunes.org:80/
 - name: SMP
 - name: SNOBOL
 - name: SOIL
@@ -352,6 +373,8 @@
 - name: Verse
   homepage: https://github.com/verse-lang/verse
   author: Tom Burris
+- name: Visual Prolog
+  homepage: https://www.visual-prolog.com/
 - name: VRML
   urls: 
     - https://en.wikipedia.org/wiki/VRML
@@ -368,3 +391,5 @@
   homepage: https://ziglang.org/
 - name: Zimbu
   homepage: http://www.zimbu.org/
+- name: ZPL
+  homepage: https://en.wikipedia.org/wiki/ZPL_(programming_language)
