--- a/_data/languages.yml
+++ b/_data/languages.yml
@@ -112,6 +112,8 @@
 - name: Dark BASIC
 - name: Delphi
   homepage: https://darklang.com/
+- name: DeviceScript
+  homepage: https://microsoft.github.io/devicescript/
 - name: Dhall
   homepage: https://github.com/dhall-lang/dhall-haskell 
 - name: Diamond
@@ -200,6 +202,8 @@
 - name: Hedy
   urls:
     - https://2022.ecoop.org/details/ecoop-2022-papers/36/Hedy-Creating-a-gradual-programming-language
+- name: Henk 2000
+  homepage: https://web.archive.org/web/20160307104755/http://www.staff.science.uu.nl/~jeuri101/MSc/jwroorda/
 - name: HOPE
   logo: ./images/logos/haxe-logo.svg
 - name: Hypercard
@@ -299,6 +303,8 @@
 - name: Plato
   author: Christopher Diggins
   homepage: https://github.com/cdiggins/plato
+- name: Pony
+  homepage: https://www.ponylang.io/
 - name: Python
   homepage: https://www.python.org/
   urls:
@@ -330,6 +336,8 @@
     - https://news.ycombinator.com/item?id=12969014
     - https://news.ycombinator.com/item?id=12923692
     - https://news.ycombinator.com/item?id=13265758
+- name: SAGE
+  homepage: https://web.archive.org/web/20220830065102/https://sage.soe.ucsc.edu/
 - name: Self
   homepage: https://selflanguage.org/
   logo: ./images/logos/self.png
@@ -351,7 +359,11 @@
   homepage: https://www.val-lang.dev/
 - name: Verse
   homepage: https://github.com/verse-lang/verse
+  urls:
+    - https://simon.peytonjones.org/assets/pdfs/verse-March23.pdf
   author: Tom Burris
+- name: Virgil
+  homepage: https://github.com/titzer/virgil
 - name: VRML
   urls: 
     - https://en.wikipedia.org/wiki/VRML
@@ -364,6 +376,8 @@
   urls:
     - https://github.com/cblp/yaml-sucks
     - https://noyaml.com/
+- name: Yarrow
+  homepage: http://web.archive.org/web/20220527220519/http://www.cs.ru.nl/~janz/yarrow/
 - name: Zig
   homepage: https://ziglang.org/
 - name: Zimbu
