--- a/_data/languages.yml
+++ b/_data/languages.yml
@@ -342,6 +342,8 @@
     - https://news.ycombinator.com/item?id=12801827
     - https://news.ycombinator.com/item?id=13242590
 - name: ReasonML
+- name: Rego
+  homepage: https://www.openpolicyagent.org/docs/latest/policy-language/
 - name: Ruby
   homepage: https://www.ruby-lang.org/en/
 - name: Rust
