--- a/_data/languages.yml
+++ b/_data/languages.yml
@@ -174,6 +174,8 @@
   homepage: https://github.com/rxi/fe
 - name: FemtoLisp
   homepage: https://github.com/JeffBezanson/femtolisp
+- name: Flix
+  homepage: https://flix.dev/
 - name: FLOW-MATIC
 - name: Folders
   homepage: http://danieltemkin.com/Esolangs/Folders
